old_nushell/crates/nu-serde/src/snapshots/nu_serde__test__it_serializes_return_value_list.snap
---
source: src/test.rs
expression: "to_success_return_values(vec![4i32, 10, 8843234, 100])"

---
Ok(
    [
        Ok(
            Value(
                Value {
                    value: Primitive(
                        Int(
                            4,
                        ),
                    ),
                    tag: Tag {
                        anchor: None,
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                },
            ),
        ),
        Ok(
            Value(
                Value {
                    value: Primitive(
                        Int(
                            10,
                        ),
                    ),
                    tag: Tag {
                        anchor: None,
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                },
            ),
        ),
        Ok(
            Value(
                Value {
                    value: Primitive(
                        Int(
                            8843234,
                        ),
                    ),
                    tag: Tag {
                        anchor: None,
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                },
            ),
        ),
        Ok(
            Value(
                Value {
                    value: Primitive(
                        Int(
                            100,
                        ),
                    ),
                    tag: Tag {
                        anchor: None,
                        span: Span {
                            start: 0,
                            end: 0,
                        },
                    },
                },
            ),
        ),
    ],
)
