old_nushell/crates/nu-serde/src/snapshots/nu_serde__test__it_works_with_complex_structs.snap
---
source: src/test.rs
expression: "to_value(&Complex{index: -40, x: 32.8, y: 38.2, map,})"

---
Ok(
    Value {
        value: Row(
            Dictionary {
                entries: {
                    "index": Value {
                        value: Primitive(
                            Int(
                                -40,
                            ),
                        ),
                        tag: Tag {
                            anchor: None,
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                        },
                    },
                    "x": Value {
                        value: Primitive(
                            Decimal(
                                BigDecimal("32.80000"),
                            ),
                        ),
                        tag: Tag {
                            anchor: None,
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                        },
                    },
                    "y": Value {
                        value: Primitive(
                            Decimal(
                                BigDecimal("38.20000000000000"),
                            ),
                        ),
                        tag: Tag {
                            anchor: None,
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                        },
                    },
                    "map": Value {
                        value: Row(
                            Dictionary {
                                entries: {
                                    "coconuts": Value {
                                        value: Table(
                                            [
                                                Value {
                                                    value: Primitive(
                                                        Int(
                                                            4,
                                                        ),
                                                    ),
                                                    tag: Tag {
                                                        anchor: None,
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                        tag: Tag {
                                            anchor: None,
                                            span: Span {
                                                start: 0,
                                                end: 0,
                                            },
                                        },
                                    },
                                    "mahi mahi": Value {
                                        value: Table(
                                            [],
                                        ),
                                        tag: Tag {
                                            anchor: None,
                                            span: Span {
                                                start: 0,
                                                end: 0,
                                            },
                                        },
                                    },
                                    "tilapia": Value {
                                        value: Table(
                                            [
                                                Value {
                                                    value: Primitive(
                                                        Int(
                                                            16,
                                                        ),
                                                    ),
                                                    tag: Tag {
                                                        anchor: None,
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                    },
                                                },
                                                Value {
                                                    value: Primitive(
                                                        Int(
                                                            3,
                                                        ),
                                                    ),
                                                    tag: Tag {
                                                        anchor: None,
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                    },
                                                },
                                                Value {
                                                    value: Primitive(
                                                        Int(
                                                            24,
                                                        ),
                                                    ),
                                                    tag: Tag {
                                                        anchor: None,
                                                        span: Span {
                                                            start: 0,
                                                            end: 0,
                                                        },
                                                    },
                                                },
                                            ],
                                        ),
                                        tag: Tag {
                                            anchor: None,
                                            span: Span {
                                                start: 0,
                                                end: 0,
                                            },
                                        },
                                    },
                                },
                            },
                        ),
                        tag: Tag {
                            anchor: None,
                            span: Span {
                                start: 0,
                                end: 0,
                            },
                        },
                    },
                },
            },
        ),
        tag: Tag {
            anchor: None,
            span: Span {
                start: 0,
                end: 0,
            },
        },
    },
)
