old_nushell/crates/nu-serde/src/snapshots/nu_serde__test__it_works_with_single_integers.snap
---
source: src/test.rs
expression: to_value(&4i32)

---
Ok(
    Value {
        value: Primitive(
            Int(
                4,
            ),
        ),
        tag: Tag {
            anchor: None,
            span: Span {
                start: 0,
                end: 0,
            },
        },
    },
)
